# flask-macro

./: Cargo.toml
src/: main.rs  ui.rs
