[package]
name = "flask-macro"
version = "0.1.0"
authors = ["최재용 <jayong93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_rawinput = {git = "https://github.com/jayong93/Rust-Rawinput"}
winapi = {version = "0.3.8", features = ["impl-default"]}
rand = {version="0.7.3", features=["small_rng"]}
lazy_static = "1.4.0"
iced = "0.1.1"
iced_native = "0.2.2"
serde = {version = "1.0.110", features = ["derive"]}
serde_json = "1.0.53"
dirs = "2.0.2"
